added hapi and neon integration

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
 native/Cargo.lock
 native/target
 native/index.node
+native/artifacts.json
 **/*~
 **/node_modules
 **/.DS_Store
+.vscode
+build
+typings
+~*.docx
+\#*\#
+.\#*
+*.swp
+build.json
+*.config
+**/.DS_Store
+.settings
+**/.vs
+**/.vscode
+!**/.vscode/tasks.json
+.idea
+yarn.lock
+package-lock.json
